# small_renderer_tutorial

./: .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json
Render3d/: Application.cpp  Application.h  CMakeLists.txt  Logic.cpp  Logic.hpp  Window.cpp  Window.hpp  main.cpp
